--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -4,8 +4,7 @@ production:
   sessions:
     default:
       database: members_production
-      hosts:
-        - <%= ENV['MONGOHQ_URL'] %>
+      uri: <%= ENV['MONGOHQ_URL'] %>
       options:
         consistency: :eventual
         max_retries: 30
