--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,6 +1,8 @@
 production:
-  uri: <%= ENV['MONGOHQ_URL'] %>
-  
+  sessions:
+    default:
+      uri: <%= ENV['MONGOHQ_URL'] %>
+      
 development:
   # Configure available database sessions. (required)
   sessions:
